[project]
authors = [
    { name = "SerinaNya", email = "34389622+SerinaNya@users.noreply.github.com" },
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "avilla-onebot-v11>=1.0.0a28",
    "avilla-core<2.0.0,>=1.0.0a26",
    "avilla-console<1.0.0,>=0.2.0",
    "arclet-alconna[full]<2.0.0,>=1.7.42",
    "arclet-alconna-avilla<1.0.0,>=0.17.3",
    "graia-saya<1.0.0,>=0.0.19",
    "pydantic<3.0.0,>=2.5.3",
    "loguru<1.0.0,>=0.7.2",
    "pygtrie<3.0.0,>=2.5.0",
    "richuru<1.0.0,>=0.1.1",
    "pyyaml<7.0.0,>=6.0.1",
    "motor<4.0.0,>=3.3.2",
    "httpx[http2,socks]<1.0.0,>=0.26.0",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "yggdrasil-mc<0.3.0,>=0.2.3",
    "pillow>=10.3.0",
    "pytz>=2024.1",
    "arrow>=1.3.0",
    "Jinja2>=3.1.3",
    "cookit>=0.4.1",
]
name = "commspt-bot-avilla"
version = "0.1.1"
description = ""
readme = "README.md"

[tool.pdm.scripts.start-bot]
call = "commspt_bot_avilla.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "pypi"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
verify_ssl = true

[tool.ruff]
extend-exclude = []
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
exclude = ["**/.venv"]

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = ["**/.venv"]
